Began work on building image-transformation endpoint. Working on validation of response variables.
